code25_all/scala/8194848.txt
scala> val b = new ArrayBuffer[Int]()
<console>:7: error: not found: type ArrayBuffer
       val b = new ArrayBuffer[Int]()
                   ^

